--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,19 +8,46 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  //text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
 }
 
+
+$headerHeight: 70px;
+$footerHeight: 70px;
+
+.layout {
+    height: 100%;
+}
+
+.contents {
+    width: 100%;
+    height: 200vh;
+}
+
+
 header {
-    height: 40px;
+    width: 100%;
+    height: $headerHeight;
     background: #0070f3;
 }
 
+.fixedHeader {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: top 0.3s ease-in-out;
+    
+    &.Up {
+        top: -$headerHeight;
+    }
+}
+
 footer {
-    height: 40px;
-    background: #eaeaea;
+    width: 100%;
+    height: $footerHeight;
+    background: pink;
 }
