--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,7 +65,7 @@ footer {
     cursor: pointer;
     
     &:focus {
-        outline:0;
+        outline: 0;
     }
 }
 
@@ -94,22 +94,22 @@ footer {
 }
 
 
-
 *, *:before, *:after {
     box-sizing: border-box;
     outline: none;
-  }
-  $bgColor:#020438;
-  $boxColor:#020438;
-  $waterFColor:#4D6DE3;
-  $waterBColor:#C7EEFF;
-  
-  body {
+}
+
+$bgColor: #020438;
+$boxColor: #020438;
+$waterFColor: #4D6DE3;
+$waterBColor: #C7EEFF;
+
+body {
     font: 14px/1 'Open Sans', helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
-  }
-  
-  .box{
+}
+
+.box {
     height: 280px;
     width: 280px;
     position: absolute;
@@ -117,73 +117,118 @@ footer {
     left: 50%;
     transform: translate(-50%, -50%);
     background: $boxColor;
-    border-radius:100%;
-    overflow: hidden; 
-    .percent{
-      position: absolute;
-      left: 0;
-      top: 0;
-      z-index:3;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      display: -webkit-flex;
-      align-items:center;
-      justify-content:center; 
-      color:#fff;
-      font-size:64px;
-    } 
-    .water{
-      position: absolute;
-      left: 0;
-      top: 0;
-      z-index:2;
-      width: 100%;
-      height: 100%;
-      transform:translate(0,100%);
-      transition: all .3s;
-      &_wave{
-        width: 200%;
+    border-radius: 100%;
+    overflow: hidden;
+    
+    .percent {
         position: absolute;
-        bottom: 92%;
-        &_back {
-          right: 0;
-          fill: $waterBColor;
-          animation: wave-back 1.4s infinite linear;
-        }
-        &_front {
-          left: 0;
-          fill: $waterFColor;
-          margin-bottom: -1px;
-          animation: wave-front .7s infinite linear;
-        }
-
-      }
+        left: 0;
+        top: 0;
+        z-index: 3;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        display: -webkit-flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-size: 64px;
     }
-  }
+    
+    .water {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        transform: translate(0, 100%);
+        transition: all .3s;
+        
+        &_wave {
+            width: 200%;
+            position: absolute;
+            bottom: 92%;
+            
+            &_back {
+                right: 0;
+                fill: $waterBColor;
+                animation: wave-back 1.4s infinite linear;
+            }
+            
+            &_front {
+                left: 0;
+                fill: $waterFColor;
+                margin-bottom: -1px;
+                animation: wave-front .7s infinite linear;
+            }
+            
+        }
+    }
+}
 
 .water_wave_middle {
     position: absolute;
     width: 100%;
-      height: 100%;
-      left: 0;
-      top: 0;
+    height: 100%;
+    left: 0;
+    top: 0;
     z-index: 3;
-            background-color: $waterFColor;
-        transition: all 3s;
-        transform: translate(0px, 8%);
+    background-color: $waterFColor;
+    transition: all 3s;
+    transform: translate(0px, 8%);
 }
 
-  @keyframes wave-front {
-
+@keyframes wave-front {
+    
     100% {
-      transform: translate(-50%, 0);
+        transform: translate(-50%, 0);
     }
-  }
-  @keyframes wave-back {
+}
 
+@keyframes wave-back {
+    
     100% {
-      transform: translate(50%, 0);
+        transform: translate(50%, 0);
     }
-  }
+}
 
+.countWrap {
+    position: absolute;
+    bottom: 52px;
+    left: 50%;
+    display: flex;
+    align-items: center;
+    width: 188px;
+    height: 57px;
+    padding: 0 6px;
+    border-radius: 6px;
+    background-color: #000000;
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 57px;
+    color: grey;
+    transform: translateX(-50%);
+}
+
+.count {
+    overflow: hidden;
+    display: flex;
+    height: 100%;
+    padding-left: 1px;
+    font-size: 36px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.number {
+    height: 570px;
+    transition: all 3s ease-in-out;
+    
+    .digit {
+        display: block;
+        width: 30px;
+        height: 57px;
+        text-align: center;
+    }
+}
