--- a/src/components/count/count.module.scss
+++ b/src/components/count/count.module.scss
@@ -1,8 +1,11 @@
+.wrap {
+    display: flex;
+}
+
 .countWrap {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: 188px;
     height: 57px;
     padding: 0 6px;
     border-radius: 6px;
