--- a/src/components/filterSlider/slider/slider.module.scss
+++ b/src/components/filterSlider/slider/slider.module.scss
@@ -2,19 +2,33 @@
 .sliderWrap {
     position: fixed;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     bottom: 0;
     right: 0;
     left: 0;
+    padding: 10px;
     background-color: #fffde5;
     
+    .buttonWrap {
+
+        .reset {
+            width: 105px;
+            height: 48px;
+            background: #fff;
+            border: 1px solid #eee;
+            border-radius: 17px;
+            font-size: 17px;
+        }
+    }
+
     .sliderContents {
         position: relative;
         display: flex;
         align-items: center;
         width: 800px;
-        height: 100px;
+        height: 80px;
     }
 
     .slider {
