--- a/src/components/charts/vennDiagram/vennDiagram.module.scss
+++ b/src/components/charts/vennDiagram/vennDiagram.module.scss
@@ -1,3 +1,12 @@
+@import '@styles/common.scss';
+
 .wrap {
-    
+    path {
+        fill: transparent;
+        stroke: $C_COOL_GRAY_50;
+        stroke-width: 1   ;
+    }
+    path:hover {
+        fill: $C_COOL_GRAY_50;
+    }
 }
