--- a/src/components/introduction/onOffCover/onOffCover.module.scss
+++ b/src/components/introduction/onOffCover/onOffCover.module.scss
@@ -1,5 +1,9 @@
 @import '@styles/common.scss';
 
+.wrap {
+    width: 100%;
+}
+
 .contentsWrap {
     overflow: hidden;
     position: relative;
@@ -14,19 +18,19 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    
+
     &.off {
         background: $C_WARM_GRAY_80;
         
-        &:after {
+        .bulbOff {
             position: absolute;
-            top: 0;
-            right: 180px;
+            top: -366px;
+            right: 0;
             width: 88px;
             height: 232px;
             background-image: url('/nextjs/img/imgOffBulb.png');
             background-size: cover;
-            content: '';
+            cursor: pointer;
         }
     }
     
@@ -38,16 +42,16 @@
         .text {
             color: $C_BLACK;
         }
-    
-        &:after {
+
+        .bulbOn {
             position: absolute;
-            top: 0;
-            right: 130px;
+            top: -366px;
+            right: -50px;
             width: 188px;
             height: 346px;
             background-image: url('/nextjs/img/imgOnBulb.png');
             background-size: cover;
-            content: '';
+            cursor: pointer;
         }
     }
 }
@@ -72,13 +76,19 @@
     width: 100%;
     background: $C_YELLOW_90;
     transition: all .7s ease-in-out;
+
+    &.visible {
+        height: 100%;
+    }
 }
 
 .cardWrap {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 96px;
+    gap: 0 32px;
 }
 
 .card {
@@ -90,10 +100,6 @@
     height: 729px;
     background: $C_WHITE;
     border-radius: 8px;
-    
-    &:not(:first-child) {
-        margin-left: 32px;
-    }
 }
 
 .profileWrap {
