--- a/src/components/charts/barChart/barChart.module.scss
+++ b/src/components/charts/barChart/barChart.module.scss
@@ -1,45 +1,32 @@
 @import '@styles/common.scss';
 
 .wrap {
-    
-    .bar {
-        display: flex;
-        align-items: center;
-    
-        &:not(:first-child) {
-            margin-top: 16px;
-        }
-    
-        .title {
-            display: inline-block;
-            width: 110px;
-            font-family: $F_NOTO_SANS_KR;
-            font-size: 13px;
-            color: $C_WARM_GRAY_70;
-            line-height: 21px;
-            letter-spacing: -0.24px;
-        }
-    
-        .value {
-            display: inline-block;
-            height: 8px;
-            background-color: $C_COOL_GRAY_40;
-            border-radius: 0 4px 4px 0;
-        }
-    
-        &.emphasized {
-            .title {
-                color: $C_GREEN_200;
-                font-weight: 500;
-            }
-    
-            .value {
-                background-color: $C_GREEN_100;
-            }
-        }
-    
-    }
+    padding: 10px;
 }
 
+.barChartBtn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 640px;
+    height: 56px;
+    background: $C_COOL_GRAY_30;
+    border: 1px solid $C_COOL_GRAY_40;    
+    border-radius: 16px;
+    font-family: $F_NOTO_SANS_KR;
+    font-size: 15px;
+    color: $C_WARM_GRAY_70;
+    line-height: 20px;
+    letter-spacing: -0.36px;
 
+    &.open {
+        background: $C_COOL_GRAY_70;
+        border: 1px solid $C_COOL_GRAY_70;
+        color: $C_WARM_GRAY_30;
+    }
 
+    &:hover {
+        border: 1px solid $C_COOL_GRAY_70;
+    }
+}
