--- a/src/components/introduction/guide/guide.module.scss
+++ b/src/components/introduction/guide/guide.module.scss
@@ -6,17 +6,14 @@
     justify-content: center;
 }
 
-.chartWrap {
+.cardWrap {
     position: relative;
-    display: flex;
-    align-items: center;
     width: 544px;
-    height: 488px;
-    padding: 64px;
     margin-left: 128px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
+
+    :not(:first-child) {
+        margin-top: 24px;
+    }
 
     &::after {
         position: absolute;
@@ -31,12 +28,23 @@
         line-height: 14px;
         letter-spacing: -0.0733333px;
         color: $C_WHITE;
-        content: '직군 적합도 예시';
+        content: '면접 질문 가이드 예시';
     }
 }
 
+.card {
+    display: flex;
+    align-items: center;
+    width: 544px;
+    height: 256px;
+    padding: 64px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+}
+
 .textWrap {
-    width: 257px;
+    width: 262px;
 }
 
 .titleWrap {
@@ -66,6 +74,8 @@
     }
 
     .desc {
+        display: flex;
+        flex-direction: column;
         margin-top: 12px;
     }
 
