--- a/src/components/introduction/banner/banner.module.scss
+++ b/src/components/introduction/banner/banner.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     width: 1440px;
     height: 100%;
-    padding: 172px 160px 0 216px;
+    padding: 172px 0 216px 160px;
     font-family: $F_NOTO_SANS_KR;
 }
 
