--- a/src/components/koreaMap/koreaMap.module.scss
+++ b/src/components/koreaMap/koreaMap.module.scss
@@ -1,9 +1,5 @@
 @import '@styles/common.scss';
 
 .wrap {
-    path:hover {
-        fill: $C_GREEN_90;
-        cursor: pointer;
-    }
-
+    display: flex;
 }
