--- a/src/components/koreaMap/map/map.module.scss
+++ b/src/components/koreaMap/map/map.module.scss
@@ -19,6 +19,21 @@
         line-height: 18px;
         color: $C_WHITE;
         cursor: pointer;
+
+        &::after {
+            position: absolute;
+            left: calc(50% - 2px);
+            bottom: -3px;
+            width: 4px;
+            height: 4px;
+            background: $C_GREEN_100;
+            border-top: 1px solid $C_GREEN_200;
+            border-left: 1px solid $C_GREEN_200;
+
+            text-align: center;
+            transform: rotate(-135deg);
+            content: '';
+        }
     }
 }
 
