--- a/src/components/koreaMap/map/map.module.scss
+++ b/src/components/koreaMap/map/map.module.scss
@@ -18,6 +18,7 @@
         font-size: 13px;
         line-height: 18px;
         color: $C_WHITE;
+        white-space: nowrap;
         cursor: pointer;
 
         &::after {
