--- a/src/components/common/slider/slider.module.scss
+++ b/src/components/common/slider/slider.module.scss
@@ -1,11 +1,14 @@
 @import '@styles/common.scss';
 
 .slider {
-    position: relative;
-    width: 100%;
     height: 30px;
-    padding: 10px 0;
+    padding: 10px;
     margin: 10px;
+}
+
+.wrap {
+    position: relative;
+    height: 100%;
 }
 
 .rail {
@@ -46,5 +49,5 @@
 }
 
 .input {
-    //display: none;
+    display: none;
 }
