--- a/src/components/koreaMap/map/map.module.scss
+++ b/src/components/koreaMap/map/map.module.scss
@@ -1,12 +1,16 @@
 @import '@styles/common.scss';
 
-.wrap {
+.mapArea {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 383px;
     height: 378px;
     
+    .mapContents {
+        position: relative;
+    }
+
     .name {
         position: absolute;
         height: 26px;
@@ -41,28 +45,28 @@
 
 .mapWrap {
     .em {
-        fill: #E7E8EA;
+         fill: #E7E8EA;
     }
-    
+        
     .selected {
         fill: $C_GREEN_90 !important;
-        
-        &.em {
+            
+         &.em {
             fill: $C_GREEN_200 !important;
         }
     }
-    
+        
     path {
         fill: #F4F4F5;
-        cursor: pointer;
-        
+         cursor: pointer;
+            
         &.noCursor {
             cursor: default;
         }
     }
-    
+        
     .hovered {
         fill: $C_COOL_GRAY_50;
     }
-    
 }
+
