--- a/src/components/charts/raderChart/raderChart.module.scss
+++ b/src/components/charts/raderChart/raderChart.module.scss
@@ -1,3 +1,83 @@
-.wrap {
+@import '@styles/common.scss';
+
+.container {
+    font-family: $F_NOTO_SANS_KR;
     
+    > .legendWrap {
+        text-align: center;
+    }
+    
+    > .radar {
+        position: relative;
+        width: 292px;
+        height: 292px;
+        fill: none;
+        
+        > svg {
+            width: 100%;
+            height: 100%;
+            
+            > .grid {
+                > .line {
+                    stroke: $C_COOL_GRAY_40;
+                    stroke-width: 0.75px;
+                    transform-origin: center;
+                }
+                
+                > .circle {
+                    stroke: $C_COOL_GRAY_40;
+                    stroke-width: 0.75px;
+                    
+                    &:last-child {
+                        stroke-width: 1px;
+                        stroke: $C_COOL_GRAY_50;
+                    }
+                }
+            }
+            
+            > .dot {
+                transform-origin: center;
+                fill: $C_COOL_GRAY_50;
+                
+                &.high {
+                    fill: $C_GREEN_200;
+                }
+            }
+            
+            > .label {
+                alignment-baseline: middle;
+                text-anchor: middle;
+                fill: $C_COOL_GRAY_60;
+                font-size: 13px;
+                line-height: 18px;
+                
+                &.high {
+                    fill: $C_GREEN_200;
+                }
+                
+                
+                
+            }
+            
+            > .average {
+                fill: none;
+                stroke: $C_WARNING_LIGHT;
+                stroke-width: 2px;
+            }
+            
+            > .value {
+                fill: $C_GREEN_100;
+                fill-opacity: 0.48;
+                
+                stroke: $C_POSITIVE_DARK;
+                stroke-width: 2px;
+            }
+        }
+        
+
+    }
+    
+    > div ~ div {
+        margin-top: 32px;
+    }
 }
