--- a/src/components/index/index.module.scss
+++ b/src/components/index/index.module.scss
@@ -7,5 +7,19 @@
 }
 
 .contents {
+    position: relative;
     font-size: 14px;
+
+    &.new {
+
+        &::after {
+            position: absolute;
+            right: -20px;
+            top: -5px;
+            font-size: 8px;
+            color: red;
+            content: 'new';
+        }
+
+    }
 }
