--- a/src/components/charts/radarChart/radarChart.module.scss
+++ b/src/components/charts/radarChart/radarChart.module.scss
@@ -1,108 +1,92 @@
 @import '@styles/common.scss';
 
-.container {
+.radarCharArea {
     font-family: $F_NOTO_SANS_KR;
-    
-    > .legendWrap {
-        text-align: center;
-    }
-    
-    > .radar {
-        position: relative;
-        width: 292px;
-        height: 292px;
-        fill: none;
+}
+
+.radarCharWrap {
+    position: relative;
+    width: 292px;
+    height: 292px;
+    fill: none;
+}
+
+.svgArea {
+    width: 100%;
+    height: 100%;
+
+    .gridWrap {
+
+        .line {
+            stroke: $C_COOL_GRAY_40;
+            stroke-width: 0.75px;
+            transform-origin: center;
+        }
         
-        > svg {
-            width: 100%;
-            height: 100%;
+        .circle {
+            stroke: $C_COOL_GRAY_40;
+            stroke-width: 0.75px;
             
-            > .grid {
-                > .line {
-                    stroke: $C_COOL_GRAY_40;
-                    stroke-width: 0.75px;
-                    transform-origin: center;
-                }
-                
-                > .circle {
-                    stroke: $C_COOL_GRAY_40;
-                    stroke-width: 0.75px;
-                    
-                    &:last-child {
-                        stroke-width: 1px;
-                        stroke: $C_COOL_GRAY_50;
-                    }
-                }
-            }
-            
-            > .dot {
-                transform-origin: center;
-                fill: $C_COOL_GRAY_50;
-                
-                &.high {
-                    fill: $C_GREEN_200;
-                }
-            }
-            
-            > .label {
-                alignment-baseline: middle;
-                text-anchor: middle;
-                fill: $C_COOL_GRAY_60;
-                font-size: 13px;
-                line-height: 18px;
-                
-                &.high {
-                    fill: $C_GREEN_200;
-                }
-                
-                
-                
-            }
-            
-            > .average {
-                fill: none;
-                stroke: $C_WARNING_LIGHT;
-                stroke-width: 2px;
-            }
-            
-            > .value {
-                fill: $C_GREEN_100;
-                fill-opacity: 0.48;
-                
-                stroke: $C_POSITIVE_DARK;
-                stroke-width: 2px;
+            &:last-child {
+                stroke-width: 1px;
+                stroke: $C_COOL_GRAY_50;
             }
         }
-    
-        > .mask {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-        
-            > .label {
-                cursor: default;
-                color: $C_COOL_GRAY_60;
-                font-size: 13px;
-                line-height: 18px;
-                position: absolute;
-                width: max-content;
-            
-                &.high {
-                    color: $C_GREEN_200;
-                }
-            
-                > .tooltipWrap {
-                    position: relative;
-                    left: -50%;
-                }
-            }
-        }
-    
     }
-    
-    > div ~ div {
-        margin-top: 32px;
+
+    .dot {
+        transform-origin: center;
+        fill: $C_COOL_GRAY_50;
+        
+        &.em {
+            fill: $C_GREEN_200;
+        }
+    }
+
+    .polygon {
+        fill: $C_GREEN_100;
+        fill-opacity: 0.48;
+        stroke: $C_POSITIVE_DARK;
+        stroke-width: 2px;
     }
 }
+
+.textArea {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    .textWrap {
+        cursor: default;
+        color: $C_COOL_GRAY_60;
+        font-size: 13px;
+        line-height: 18px;
+        position: absolute;
+        width: max-content;
+    
+        &.em {
+            color: $C_GREEN_200;
+
+            .title {
+                font-weight: 600;
+            }
+        }
+    
+        .contents {
+            position: relative;
+            left: -50%;
+            cursor: pointer;
+        }
+
+        .title {
+            display: block;
+        }
+
+        .text {
+            display: block;
+        }
+    }
+}
+
