--- a/src/components/charts/radarChart/radarChart.module.scss
+++ b/src/components/charts/radarChart/radarChart.module.scss
@@ -16,6 +16,9 @@
     height: 100%;
 
     .gridWrap {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         .line {
             stroke: $C_COOL_GRAY_40;
