--- a/src/components/chunSik/chunSik.module.scss
+++ b/src/components/chunSik/chunSik.module.scss
@@ -81,8 +81,8 @@
 }
 
 .selectWrap {
-    overflow: hidden;
-    width: 100%;
+    overflow-x: scroll;
+    width: 550px;
     background: #fff;
     border-top: 4px solid #000;
 
