--- a/src/components/charts/radarChart/radarChart.module.scss
+++ b/src/components/charts/radarChart/radarChart.module.scss
@@ -2,6 +2,15 @@
 
 .radarCharArea {
     font-family: $F_NOTO_SANS_KR;
+    
+    &.empty {
+        .polygon {
+            fill: $C_COOL_GRAY_40;
+            fill-opacity: 0.7;
+            stroke: $C_COOL_GRAY_50;
+            stroke-width: 2px;
+        }
+    }
 }
 
 .radarCharWrap {
@@ -68,7 +77,7 @@
         line-height: 18px;
         position: absolute;
         width: max-content;
-    
+        
         &.em {
             color: $C_GREEN_200;
 
