--- a/src/components/common/selectList/selectList.module.scss
+++ b/src/components/common/selectList/selectList.module.scss
@@ -14,7 +14,7 @@
         justify-content: center;
         height: 56px;
         padding: 18px 16px;
-        background: #FFFFFF;
+        background: $C_WHITE;
         border: 1px solid $C_COOL_GRAY_40;
         border-radius: 4px;
         font-weight: 500;
