--- a/src/components/jobdaIntroduction/jobdaIntroduction.module.scss
+++ b/src/components/jobdaIntroduction/jobdaIntroduction.module.scss
@@ -1,57 +1,76 @@
 .container {
-    background: black;
-    color: white;
-
-    .sticky {
-        position: sticky;
-        top: 0;
-        width: 100%;
-        height: 100vh;
-    }
-
-    .slideContainer {
-        overflow: hidden;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-    }
- }
-
- .title {
-    position: absolute;
-    padding: 30px 0;
+  background: black;
+  color: white;
+  
+  .sticky {
+    position: sticky;
+    top: 0;
     width: 100%;
-    height: 50px;
-    text-align: center;
-    bottom: 0px;
+    height: 100vh;
+  }
+  
+  .slideContainer {
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.title {
+  position: absolute;
+  padding: 30px 0;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  bottom: 0px;
+}
+
+.text1 {
+  width: 400px;
+  color: white;
+  font-size: 70px;
+  font-weight: bold;
+}
+
+.text2 {
+  position: absolute;
+  width: 400px;
+  color: black;
+  font-size: 70px;
+  font-weight: bold;
 }
 
 .circle {
-    width: 20px;
-    height: 20px;
-    background-color: white;
-    border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 20px;
+  height: 20px;
+  background-color: #6CDD83;
+  border-radius: 50%;
 }
 
 .slide {
-    position: absolute;
-    display: none;
-    z-index: 0;
-
-    &.enabled {
-        display: block;
-    }
-
-    .bigText p {
-        margin: 0;
-        font-size: 45px;
-        font-weight: bold;
-        line-height: 1.35;
-        letter-spacing: -1.5px;
-        word-spacing: 1.5px;
-        text-align: center;
-    }
+  position: absolute;
+  display: none;
+  z-index: 0;
+  
+  &.enabled {
+    display: flex;
+  }
+  
+  .bigText p {
+    margin: 0;
+    font-size: 45px;
+    font-weight: bold;
+    line-height: 1.35;
+    letter-spacing: -1.5px;
+    word-spacing: 1.5px;
+    text-align: center;
+  }
 }
