--- a/styles/variables/colors.scss
+++ b/styles/variables/colors.scss
@@ -113,6 +113,11 @@ $C_WARM_GRAY_90: #232323;
 $C_WARNING: #f6a609;
 $C_WARNING_DARK: #e89806;
 $C_WARNING_LIGHT: #ffbc1f;
+$C_WARNING_RED: #fb4e4e;
+$C_WARNING_RED_DARK: #e93c3c;
+$C_WARNING_RED_LIGHT: #ff6262;
+$C_WARNING_RED_WHITE: #f9e0e2;
+
 
 // POSITIVE
 $C_POSITIVE: #6cdd83;
