--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -1,12 +1,22 @@
 // header height
 $MIN_WIDTH: 1168px;
-$HEADER_HEIGHT: 64px;
+$HEADER_SEARCH_AREA_HEIGHT: 70px;
+$HEADER_SEARCH_AREA_MAX_HEIGHT: 82px;
+$HEADER_MENU_AREA_HEIGHT: 48px;
+$HEADER_HEIGHT: $HEADER_SEARCH_AREA_HEIGHT + $HEADER_MENU_AREA_HEIGHT;
 $CONTENTS_WIDTH: 1120px;
-$FOOTER_HEIGHT: 300px;
+$FOOTER_CONTENT_HEIGHT: 104px;
+$FOOTER_COPYRIGHT_HEIGHT: 46px;
+$FOOTER_HEIGHT: $FOOTER_CONTENT_HEIGHT + $FOOTER_COPYRIGHT_HEIGHT;
+
+// 공통 컴포넌트 사이즈
+$TOP_NUDGE_HEIGHT: 48px;
 
 // font
-$F_NOTO_SANS_KR: NotoSanskr, sans-serif;
-$F_MONTSERRAT: Montserrat, sans-serif;
+$F_NOTO_SANS_KR: 'Noto Sans KR', sans-serif;
+$F_MONTSERRAT: 'Montserrat', sans-serif;
+$F_WEMAKE_PRICE: 'Wemakeprice', sans-serif;
+$F_PRETENDARD: Pretendard, sans-serif;
 
 // z-index
 $Z_INDEX_BASIC: 10;
