--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,8 +1,8 @@
 // ellipsis
-// @param {number} $line - 줄 수
-// @param {px} $lineHeight - 한줄 높이
-@mixin ellipsis($line: 1, $lineHeight: 1.2em) {
-	@if($line == 1) {
+// @param {number} $LINE - 줄 수
+// @param {px} $LINE_HEIGHT - 한줄 높이
+@mixin ellipsis($LINE: 1, $LINE_HEIGHT: 1.2em) {
+	@if($LINE == 1) {
 		overflow: hidden;
 		display: block;
 		text-overflow: ellipsis;
@@ -11,28 +11,29 @@
 		overflow: hidden;
 		display: block;
 		display: -webkit-box;
-		-webkit-line-clamp: $line;
+		-webkit-line-clamp: $LINE;
 		-webkit-box-orient: vertical;
-		max-height: $lineHeight * $line; // webkit 이외의 브라우저 대응
-		line-height: $lineHeight;
+		max-height: $LINE_HEIGHT * $LINE; // webkit 이외의 브라우저 대응
+		line-height: $LINE_HEIGHT;
 		text-overflow: ellipsis;
 		word-break: break-word;
 	}
 }
 
 // 공통 버튼 스타일
-// @param {string} $type - 버튼 타입
-// @param {string} $size - 버튼 크기
-@mixin commonBtnStyle($type: 'primary', $size: 'large') {
+// @param {string} $TYPE - 버튼 타입
+// @param {string} $SIZE - 버튼 크기
+@mixin commonBtnStyle($TYPE: 'primary', $SIZE: 'large') {
 	position: relative;
 	text-align: center;
+	cursor: pointer;
 
 	&:disabled {
 		cursor: default;
 	}
 
 	// 스타일에 따른 처리
-	@if($type == 'primary') {
+	@if($TYPE == 'primary') {
 		width: 228px;
 		border-radius: 4px;
 		background-color: $C_GREEN_100;
@@ -41,17 +42,17 @@
 		color: $C_JOBDA_WHITE;
 		
 		// 크기에 따른 처리
-		@if($size == 'large') {
+		@if($SIZE == 'large') {
 			height: 64px;
 			font-size: 17px;
 			line-height: 64px;
 			letter-spacing: -0.41px;
-		} @else if($size == 'medium') {
+		} @else if($SIZE == 'medium') {
 			height: 56px;
 			font-size: 17px;
 			line-height: 56px;
 			letter-spacing: -0.41px;
-		} @else if($size == 'small') {
+		} @else if($SIZE == 'small') {
 			height: 44px;
 			font-size: 15px;
 			line-height: 44px;
@@ -60,19 +61,6 @@
 
 		&:hover {
 			background-color: $C_GREEN_200;
-		}
-
-		&:active {
-			&:after {
-				position: absolute;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				border-radius: 4px;
-				background-color: rgba(252, 252, 252, 0.15);
-				content: '';
-			}
 		}
 
 		&:disabled {
@@ -85,7 +73,7 @@
 	}
 	
 	// 스타일에 따른 처리
-	@else if($type == 'secondary') {
+	@else if($TYPE == 'secondary') {
 		width: 228px;
 		border: 2px solid $C_GREEN_100;
 		border-radius: 4px;
@@ -95,17 +83,17 @@
 		color: $C_GREEN_100;
 
 		// 크기에 따른 처리
-		@if($size == 'large') {
+		@if($SIZE == 'large') {
 			height: 64px;
 			font-size: 17px;
 			line-height: 60px;
 			letter-spacing: -0.41px;
-		} @else if($size == 'medium') {
+		} @else if($SIZE == 'medium') {
 			height: 56px;
 			font-size: 17px;
 			line-height: 52px;
 			letter-spacing: -0.41px;
-		} @else if($size == 'small') {
+		} @else if($SIZE == 'small') {
 			height: 44px;
 			font-size: 15px;
 			line-height: 40px;
@@ -116,19 +104,6 @@
 			border-color: $C_GREEN_200;
 			background-color: $C_JOBDA_WHITE;
 			color: $C_GREEN_200;
-		}
-
-		&:active {
-			&:after {
-				position: absolute;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				border-radius: 4px;
-				background-color: rgba(252, 252, 252, 0.15);
-				content: '';
-			}
 		}
 
 		&:disabled {
@@ -143,20 +118,20 @@
 	}
 	
 	// 스타일에 따른 처리
-	@else if($type == 'underline') {
+	@else if($TYPE == 'underline') {
 		font-family: $F_NOTO_SANS_KR;
 		color: $C_COOL_GRAY_80;
 		
 		// 크기에 따른 처리
-		@if($size == 'large') {
+		@if($SIZE == 'large') {
 			font-size: 17px;
 			line-height: 24px;
 			letter-spacing: -0.41px;
-		} @else if($size == 'medium') {
+		} @else if($SIZE == 'medium') {
 			font-size: 15px;
 			line-height: 20px;
 			letter-spacing: -0.36px;
-		} @else if($size == 'small') {
+		} @else if($SIZE == 'small') {
 			font-size: 13px;
 			line-height: 18px;
 			letter-spacing: -0.0866px;
@@ -164,11 +139,11 @@
 
 		&:after {
 			position: absolute;
-            right: 0;
-            bottom: -1px;
-            left: 0;
-            height: 1px;
-            background-color: $C_COOL_GRAY_80;
+			right: 0;
+			bottom: -1px;
+			left: 0;
+			height: 1px;
+			background-color: $C_COOL_GRAY_80;
 			content: '';
 		}
 
@@ -226,7 +201,7 @@
 		text-align: center;
 	}
 
-	//휴대폰 번호 일경우 경우
+	//휴대폰 번호일 경우
 	&.mobile {
 		letter-spacing: 2.6px;
 	}
@@ -281,29 +256,64 @@
 }
 
 // 공통 box-shadow 스타일
-// @param {string} $type - box-shadow 타입
-@mixin commonBoxShadowStyle($type: 'base') {
-	@if($type == 'base') {
+// @param {string} $TYPE - box-shadow 타입
+@mixin commonBoxShadowStyle($TYPE: 'base') {
+	@if($TYPE == 'base') {
 		box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
 	}
 
-	@else if($type == 'medium') {
+	@else if($TYPE == 'medium') {
 		box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
 	}
 
-	@else if($type == 'large') {
+	@else if($TYPE == 'large') {
 		box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05);
 	}
 
-	@else if($type == 'xlarge') {
+	@else if($TYPE == 'xlarge') {
 		box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.1), 0px 10px 10px rgba(0, 0, 0, 0.04);
 	}
 
-	@else if($type == 'xxlarge') {
+	@else if($TYPE == 'xxlarge') {
 		box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.25);
 	}
 
-	@else if($type == 'inner') {
+	@else if($TYPE == 'inner') {
 		box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.06);
+	}
+}
+
+// scroll
+@mixin scroll($SCROLL_WIDTH: 4px, $IE_TRACK_COLOR: $C_WHITE) {
+	$BASIC_SCROLL_WIDTH: 17px;
+	$SCROLL_BAR_COLOR: $C_COOL_GRAY_40;
+	$TRACK: transparent;
+	
+	overflow-x: hidden;
+	overflow-y: auto;
+	margin-right: calc(#{$SCROLL_WIDTH} - #{$BASIC_SCROLL_WIDTH});
+	padding-right: 0;
+
+	/*  IE scrollbar style  */
+	scrollbar-face-color: $SCROLL_BAR_COLOR;
+	scrollbar-shadow-color: $SCROLL_BAR_COLOR;
+	scrollbar-track-color: $IE_TRACK_COLOR;
+	scrollbar-arrow-color: $IE_TRACK_COLOR;
+
+	&::-webkit-scrollbar {
+		width: $BASIC_SCROLL_WIDTH;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: $SCROLL_BAR_COLOR;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: $TRACK;
+	}
+
+	&::-webkit-scrollbar-button {
+		width: 0;
+		height: 0;
 	}
 }
