--- a/src/components/charts/bubbleChart/bubbleChart.module.scss
+++ b/src/components/charts/bubbleChart/bubbleChart.module.scss
@@ -15,6 +15,13 @@
   left: 0;
 }
 
+.scale {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .btn {
   display: block;
   position: absolute;
