--- a/src/components/imageCrop/imageCrop.module.scss
+++ b/src/components/imageCrop/imageCrop.module.scss
@@ -1,8 +1,6 @@
 .wrap {
   position: relative;
-  display: flex;
-  width: 412px;
-  height: 412px;
+  display: block;
   background-color: #eee;
 
   .cropArea {
@@ -27,8 +25,6 @@
     display: block;
     width: 100%;
     height: 100%;
-
-    .img {}
   }
 }
 
@@ -43,6 +39,7 @@
   background-color: #000;
   opacity: .5;
   cursor: crosshair;
+  user-select: none;
 }
 
 .cropBox {
