--- a/src/components/charts/lineChart/lineChart.module.scss
+++ b/src/components/charts/lineChart/lineChart.module.scss
@@ -1,11 +1,3 @@
-@import '@styles/common.scss';
-
-.wrap {
-  cursor: pointer;
-  width: 416px;
+.lineChartArea {
+    
 }
-
-.path {
-  transition: all 1s ease-in-out;
-}
-
